--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<>[Dhtml>
-<>[Dbody>
-<>[Dh1>Your Welcome on my Page<>[D/h1>
-<>[D/body>
-</html>[A[A[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C[C
-[D
+<html>
+<body>
+<h1>Your Welcome on my Page</h1>
+Enter Your Name : <input type="text" name="name" placeholder="Your Name"/>
+Enter Your City : <input type="text" name="city" placeholder="Your City"/>
+<input type="button" value="Submit" name="submiy"/>
+</body>
+</html>
 
 
